# tech-stack-hypermodern-python

./: LICENSE  README.md
hypermodern-python/tech_stack_hypermodern_python/: pyproject.toml
hypermodern-python/tech_stack_hypermodern_python/src/tech_stack_hypermodern_python/: console.py
